--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -1,6 +1,7 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
         <h5 class="card-title">${answers.name}</h5>
+        <i class="fas fa-user-astronaut fa-3x"></i>
         <p class="card-text">Engineer</p>
     </div>
     <ul class="list-group list-group-flush">
